--- a/w6-lab-5/app/src/main/res/values/strings.xml
+++ b/w6-lab-5/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Application Strings -->
     <string name="app_name">Candy Order Lab</string>
-
+    <string name="congrats">Congrats on the order!</string>
 
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
